# SImulacion

./: .gitignore  README.md  analiticas.py  config.py  descripcion_imagen.md  engine.py  epidemic_simulation.py  main.py  pyproject.toml  resultados.csv  simular.py
pruebas/: prueba_espacial.py  prueba_individuo.py  prueba_motor.py
src/: configuracion.py
src/almacenamiento/: manejador_csv.py  manejador_excel.py
src/interfaz/: aplicacion.py  componentes.py  grafico.py
src/modelos/: individuo.py
src/simulacion/: espacial.py  motor.py
src/simulacion_epidemia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
