[project]
name = "simulacion-epidemia"
version = "0.3.0"
description = "Simulación de propagación de epidemias con interfaz gráfica"
requires-python = ">=3.10"
dependencies = ["openpyxl"]

[tool.pytest.ini_options]
testpaths = ["pruebas"]
python_files = ["prueba_*.py"]

[tool.pyright]
pythonPath = ".venv/bin/python"
include = ["."]
extraPaths = ["."]
